# BabylonBurst

./: .env.sample  .gitignore  CodeTidy.sh  EngineSetup.sh  EngineUpgrade.sh  README.md  StartDev.sh  StartEditor.sh  bbCodeTidy.sh  bbEngineSetup.sh  bbEngineUpgrade.sh  bbMemoryLeakCheck.sh  bbStartDev.sh  bbStartEditor.sh  index.html  meshPerformanceAnalysis.html  package.json  runDocsifyLocal.sh  runLocalServer.sh  style.css  tsconfig.json
Engine/Server/: .clang-format  .gitignore  BuildDev.sh  CMakeLists.txt  DevSetup.sh  MemoryLeakCheck.sh  Readme.md  package.json
Engine/Server/SetupFiles/: ubuntuInstalls.sh  vcpkgInstalls.sh
Engine/Server/SetupFiles/hooks/: pre-commit
Engine/Server/SetupFiles/prometheus/: prometheus.yml
Engine/Server/SetupFiles/vscode/: c_cpp_properties.json  launch.json  tasks.json
Engine/Server/Tools/: .gitignore  prometheus-2.44.0.linux-amd64.tar.gz.1  prometheus-2.44.0.linux-amd64.tar.gz.2
Engine/Server/Tools/Autogeneration/: Autogenerator.ts  package.json  tsconfig.json
Engine/Server/Tools/Autogeneration/BodyMethods/: BodyAutogeneration.ts
Engine/Server/Tools/Autogeneration/BodyMethods/AutoSerializeMessage/: AutoSerializeMessageGenerator.ts
Engine/Server/Tools/Autogeneration/BodyMethods/ComponentMethods/: ComponentEquality.ts  ComponentSerializers.ts  ComponentTrackedSetup.ts
Engine/Server/Tools/Autogeneration/ClientTypings/: ClientTypingsAutogenerator.ts
Engine/Server/Tools/Autogeneration/HeaderMethods/: HeaderAutogeneration.ts
Engine/Server/Tools/Autogeneration/HeaderMethods/TrackedVariable/: TrackedVariableHeaderAutogen.ts
Engine/Server/Tools/Autogeneration/TrackedVariables/: TrackedVariableSetup.ts
Engine/Server/Tools/Autogeneration/Utils/: CommentMacroFinder.ts  ComponentLoadGenerator.ts  ComponentPropertyReader.ts  EnvironmentVariableLoader.ts  InvalidFileRemover.ts  PlatformUtils.ts
Engine/Server/src/Common/Engine/Entities/: EntityMacros.hpp  EntitySeriesTaskRunners.hpp  EntitySystem.cpp  EntitySystem.h  ICustomMsgpack.h  PackerDetails.hpp  TrackedVariable.hpp  TrackedVariableForwardDeclare.hpp  TrackedVariableSerialization.cpp
Engine/Server/src/Common/Engine/GameLoop/: CommonGameLoop.cpp  CommonGameLoop.h
Engine/Server/src/Common/Engine/Navigation/: BuiltNavMesh.cpp  BuiltNavMesh.h  BuiltNavMesh.hpp  LoadedNavmeshData.cpp  LoadedNavmeshData.h  LoadedNavmeshSurface.cpp  LoadedNavmeshSurface.h  NavigatableAgent.cpp  NavigatableAgent.h  NavigatableEntitySurface.cpp  NavigatableEntitySurface.h  NavigatableMesh.cpp  NavigatableMesh.h  NavigatableMesh.hpp  NavmeshBuildSettings.cpp  NavmeshBuildSettings.h  NavmeshBuildSetup.cpp  NavmeshBuildSetup.h  NavmeshBuildSystem.cpp  NavmeshBuildSystem.h  NavmeshBuildSystemDebugMethods.cpp
Engine/Server/src/Common/Engine/Networking/: ClientLerpTransform.hpp
Engine/Server/src/Common/Engine/Physics/: CapsuleCollider.hpp  LinearForceEngine.hpp  PhysicsCollider.hpp  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsUtils.cpp  PhysicsUtils.h  RaycastableObject.h  RigidBody.cpp  RigidBody.h  RotationEngine.hpp
Engine/Server/src/Common/Engine/Player/: PlayerCoreComponent.hpp  PlayerMessageProcessor.hpp  testRegister.hpp
Engine/Server/src/Common/Engine/Rendering/: DirectionalLight.cpp  DirectionalLight.h  DirectionalLight.hpp  ExtractedMeshData.cpp  ExtractedMeshData.h  HiddenEntity.hpp  (+10 more)
Engine/Server/src/Common/Entities/: EntitySeriesTaskRunners.hpp  EntitySystem.cpp  EntitySystem.h  PackerDetails.hpp
Engine/Server/src/Common/GameLoop/: CommonGameLoop.cpp  CommonGameLoop.h
Engine/Server/src/Common/Networking/: ClientLerpTransform.hpp  NetworkingMessageTypes.hpp
Engine/Server/src/Common/Physics/: CapsuleCollider.hpp  LinearForceEngine.hpp  PhysicsCollider.hpp  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h  RotationEngine.hpp
Engine/Server/src/Common/Player/: PlayerBuildingComponent.hpp  PlayerController.hpp  PlayerCoreComponent.hpp  PlayerInputBeginBuilding.hpp  PlayerInputMovement.hpp  PlayerInputPlaceItem.hpp  PlayerMessageProcessor.hpp  PlayerPawn.hpp
Engine/Server/src/Common/Rendering/: InstancedRender.hpp  ModelLoader.cpp  ModelLoader.h  RenderingLayers.hpp
Engine/Server/src/Common/SaveLoad/: ComponentLoader.h  EntityLoader.cpp  EntityLoader.h  EntitySaver.cpp  EntitySaver.h  EntityTemplate.cpp  EntityTemplate.h
Engine/Server/src/Common/Tests/: test_Ecs.cpp  test_Network.cpp  test_Prefabs.cpp  test_Saving.cpp
Engine/Server/src/Common/Utils/: ChronoUtils.h  Environment.cpp  MathUtils.cpp  MathUtils.h  Observable.hpp  Settings.h  StringUtils.cpp  StringUtils.h
Engine/Server/src/ServerSpecific/: StorageTypes.hpp  serverMain.cpp  serverSetup.h
Engine/Server/src/ServerSpecific/Aws/: AwsManager.cpp  AwsManager.h
Engine/Server/src/ServerSpecific/Engine/: serverMain.cpp  serverSetup.cpp  serverSetup.h
Engine/Server/src/ServerSpecific/Entities/: EntityTaskRunners.hpp
Engine/Server/src/ServerSpecific/GameLoop/: GameLoop.cpp
Engine/Server/src/ServerSpecific/Networking/: NetworkingManager.cpp  NetworkingManager.h
Engine/Server/src/ServerSpecific/Player/: PlayerConnectionManager.cpp  PlayerConnectionManager.h
Engine/Server/src/ServerSpecific/TestSenarios/: TestBoxPingPong.hpp  TestCreationDeletion.hpp  TestingController.hpp
Engine/Server/src/ServerSpecific/Utils/: PerfTracking.cpp  PerfTracking.h  ThreadPool.h
Engine/Server/src/WASMSpecific/: StorageTypes.hpp  wasmMain.cpp  wasmSetup.h
Engine/Server/src/WASMSpecific/Aws/: AwsManager.cpp  AwsManager.h
Engine/Server/src/WASMSpecific/Engine/: wasmMain.cpp  wasmSetup.h
Engine/Server/src/WASMSpecific/Entities/: EntityTaskRunners.hpp
Engine/Server/src/WASMSpecific/GameLoop/: GameLoop.cpp  GameLoop.h
Engine/Server/src/WASMSpecific/Networking/: ServerMessageProcessor.cpp  ServerMessageProcessor.h
Engine/Server/src/WASMSpecific/Utils/: PerfTracking.cpp  PerfTracking.h  ThreadPool.h
Engine/Server/src/WASMSpecific/WASM_INTERFACE/: WASMAwsInterface.cpp  WASMAwsInterface.h  WASMDataTypes.cpp  WASMEntityInterface.cpp  WASMGameLoopInterface.cpp  WASMNetworkingInterface.cpp  WASMSetupInterface.cpp
(+533 files in other folders)
